TAB-3201 WIP: Upgrade to Java 8 and Scala 2.11.5