@@ -25,13 +25,13 @@
 	<inceptionYear>2012</inceptionYear>
 
 	<properties>
-		<scala.version>2.10.1</scala.version>
-		<scala.major.version>2.10</scala.major.version>
+		<scala.version>2.11.5</scala.version>
+		<scala.major.version>2.11</scala.major.version>
 		<org.springframework.version>4.1.4.RELEASE</org.springframework.version>
 		<org.hibernate.version>4.3.8.Final</org.hibernate.version>
 		<com.fasterxml.jackson.version>2.5.0</com.fasterxml.jackson.version>
 		<org.apache.lucene.version>4.7.0</org.apache.lucene.version>
-		<net.databinder.dispatch.version>0.8.9</net.databinder.dispatch.version>
+		<net.databinder.dispatch.version>0.8.10</net.databinder.dispatch.version>
 		<org.apache.poi.version>3.8</org.apache.poi.version>
 		<org.apache.tiles.version>3.0.5</org.apache.tiles.version>
 		<warwickutils.version>20150128</warwickutils.version>
@@ -551,7 +551,6 @@
 					<jvmArgs>
 						<jvmArg>-Xms256m</jvmArg>
 						<jvmArg>-Xmx2048m</jvmArg>
-						<jvmArg>-XX:MaxPermSize=512m</jvmArg>
 					</jvmArgs>
 					<args>
 						<arg>-deprecation</arg>
@@ -559,8 +558,8 @@
 						<arg>-Xmax-classfile-name</arg>
 						<arg>130</arg>
 					</args>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -577,8 +576,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -1003,15 +1002,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.scala-tools.testing</groupId>
-			<artifactId>specs_${scala.major.version}</artifactId>
-			<version>1.6.9</version>
+			<groupId>org.specs2</groupId>
+			<artifactId>specs2_${scala.major.version}</artifactId>
+			<version>2.4.15</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_${scala.major.version}</artifactId>
-			<version>2.0.M6-SNAP8</version>
+			<version>2.2.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -1036,7 +1035,7 @@
 		<dependency>
 			<groupId>com.jsuereth</groupId>
 			<artifactId>scala-arm_${scala.major.version}</artifactId>
-			<version>1.3</version>
+			<version>1.4</version>
 		</dependency>
 	</dependencies>
 
@@ -1101,8 +1100,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.scala</groupId>
-				<artifactId>spring-scala_${scala.major.version}</artifactId>
-				<version>1.0.0.RC1</version>
+				<artifactId>spring-scala</artifactId>
+				<version>1.0.0.M2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
